<resources>
    <string name="app_name">Interview app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel_top_bar">Cancel</string>
    <string name="welcome">Welcome to Laurent Parsy interview app</string>
    <string name="home_text">Please choose the view to display:</string>
    <string name="one_selec_title">Hold Up!</string>
    <string name="one_selec_text">This is not included in your current package.</string>
    <string name="multi_selec_text">How to do commute to work ?</string>
    <string name="multi_selec_title">Quick poll</string>
    <string name="multi_selec_one">Walk (Default)</string>
    <string name="multi_selec_two">Drive</string>
    <string name="multi_selec_three">Teleport</string>
    <string name="pin_parental_title">Enter pin</string>
    <string name="pin_parental_text">Enter your PIN to access Parental Controls Settings</string>
    <string name="pin_parental_forgotten">Forgot your</string>
    <string name="pin_parental"><u>PIN</u></string>
    <string name="button_ok">OK</string>
    <string name="url_pin_link">http://www.wikihow.com/Remember-a-Forgotten-Password</string>
    <string name="code">1234</string>
    <string name="right_code_msg">You found the right pin</string>
    <string name="wrong_code_msg">Try 1234 !</string>
    <string name="right_code_title">Congratulations</string>
    <string name="wrong_code_title">Wrong pin</string>
    <string name="opinion">My opinion</string>
    <string name="walk_opinion">Slow but ecological !</string>
    <string name="drive_opinion">Good luck with the parking..</string>
    <string name="teleport_opinion">Definitely the best !</string>

    <string name="item1">Selection with one option</string>
    <string name="item2">Selection with multiple option</string>
    <string name="item3">Parental pin</string>
</resources>
