<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv_pin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/general_text_size"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/home_margin"
        android:text="@string/pin_parental_text"/>

        <EditText
            android:id="@+id/et_pin"
            android:layout_width="150dp"
            android:gravity="center"
            android:textSize="@dimen/title_text_size"
            android:background="@android:color/white"
            android:imeOptions="actionDone"
            android:layout_height="40dp"
            android:inputType="numberPassword"
            android:maxLength="4"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/home_margin"
            android:orientation="horizontal">

            <TextView
            android:id="@+id/tv_forgotten_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/general_text_size"
            android:textColor="@android:color/darker_gray"
            android:layout_marginBottom="@dimen/home_margin"
            android:text="@string/pin_parental_forgotten"/>

            <TextView
                android:id="@+id/tv_pin_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:textSize="@dimen/general_text_size"
                android:textColor="@android:color/white"
                android:layout_marginBottom="@dimen/home_margin"
                android:text="@string/pin_parental"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/general_text_size"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="@dimen/home_margin"
                android:text=" ?"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>